[project]
name = "agent-uri-resolve"
version = "0.1.0"
description = "Resolve agent/feedback URIs into erc_8004.uri_documents + agent_manifest"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "psycopg[binary]>=3.2",
    "beautifulsoup4>=4.12",
    "playwright>=1.49",
    "playwright-stealth>=1.0.6",
]

[dependency-groups]
dev = []
