[project]
name = "wallet-lp-positions-discovery"
version = "0.1.0"
description = "LP positions discovery (UniV3 NFT + classic pools) via Alchemy + DeFiLlama"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "psycopg[binary]>=3.2",
    "eth-abi>=5.0",
    "eth-utils>=5.0",
    "pycryptodome>=3.20",
]

[dependency-groups]
dev = []
